# mcp-auth-demo

./: README.md  agent.py  fastmcp_client.py  pyproject.toml  server.py
